--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "backpack-core": "^0.2.1"
   },
   "scripts": {
-    "dev": "FROM=\"'fromDisplayName' <fromEmail>\" AUTH_EMAIL=senderEmail AUTH_PASSWORD=senderPassword backpack --debug",
+    "dev": "FROM=\"'fromDisplayName' <fromEmail>\" SENDER_EMAIL=senderEmail SENDER_PASSWORD=senderPassword backpack --debug",
     "build": "backpack build",
     "start": "node ./build/main.js"
   },
   "now": {
     "env": {
-      "AUTH_EMAIL": "sender email",
-      "AUTH_PASSWORD": "sender password"
+      "SENDER_EMAIL": "sender email",
+      "SENDER_PASSWORD": "sender password"
     }
   }
 }
