--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "now-emails",
-  "version": "1.0.0",
+  "name": "emails.now.sh",
+  "version": "0.5.0",
   "main": "src/index.js",
   "license": "MIT",
   "dependencies": {
@@ -8,10 +8,10 @@
     "nodemailer": "^3.1.8"
   },
   "devDependencies": {
-    "backpack-core": "^0.2.1"
+    "nodemon": "^1.11.0"
   },
   "scripts": {
-    "build": "backpack build",
-    "start": "node ./build/main.js"
+    "dev": "AUTH_EMAIL='test' AUTH_PASSWORD='test' nodemon --exec npm start",
+    "start": "micro src/index"
   }
 }
